tests/negative/NotInScope.mjuvix
module NotInScope;

  axiom haha : Type;
  axiom blah : Type;
  axiom blaah : Type;

  axiom test : bla;

end;